tests/macro_attributes/inner/05-incomplete_eq_comma.stderr
error: expected boolean literal
 --> tests/macro_attributes/inner/05-incomplete_eq_comma.rs:3:18
  |
3 | #[lazy_nd(inner =,)]
  |                  ^
